converted to CSS grid

--- a/Proto/index.html
+++ b/Proto/index.html
@@ -7,22 +7,24 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
-  <body id="App">
+  <body id="App" class="test-border">
     <header id="Header" class="test-border"></header>
-    <div id="Content" class="test-border">
-      <nav id="NavBar" class="test-border"></nav>
-      <div id="right-content">
-        <nav id="Categories" class="test-border"></nav>
-        <main id="VideoCanvas" class="test-border">
-          <div id="video-wrapper" class="test-border">
-            <section class="Video" class="test-border">
-              <video width="" height="" class="test-border"></video>
-              <p class="title-p1" class="test-border"></p>
-              <p class="title-p2" class="test-border"></p>
-            </section>
-          </div>
-        </main>
-      </div>
-    </div>
+    <nav id="Nav" class="test-border"></nav>
+    <nav id="Categories" class="test-border"></nav>
+
+    <main id="VideoCanvas" class="test-border">
+      <section id="first-row" class="Row test-border">
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+      </section>
+      <section class="Row test-border">
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+        <video class="test-border"></video>
+      </section>
+    </main>
   </body>
 </html>
