need to make videosection go beyond the page

--- a/Proto/index.html
+++ b/Proto/index.html
@@ -14,16 +14,22 @@
 
     <main id="VideoCanvas" class="test-border">
       <section id="first-row" class="Row test-border">
-        <video class="test-border"></video>
-        <video class="test-border"></video>
-        <video class="test-border"></video>
-        <video class="test-border"></video>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
       </section>
       <section class="Row test-border">
-        <video class="test-border"></video>
-        <video class="test-border"></video>
-        <video class="test-border"></video>
-        <video class="test-border"></video>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+      </section>
+      <section class="Row test-border">
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
+        <img class="test-border thumbnail"></img>
       </section>
     </main>
   </body>
